Closed Bug 531373 Opened 15 years ago Closed 15 years ago

[HTML5][Patch] script between head and body is not executed

Categories

(Core :: DOM: HTML Parser, defect, P1)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: nanto, Assigned: hsivonen)

References

Details

Attachments

(2 files)

Script elements written between the head element's end tag and the body element's start tag doesn't execute their scripts when html5.enabled is true.  This bug makes livedoor Reader [1] not work.
[1] http://reader.livedoor.com/reader/ (written in Japanese, an account is required to use the service)

See the attachment to reproduce the bug.
Actual: "Failed"
Expected: "OK"

Confirmed on Gecko/20091126 Minefield/3.7a1pre.
I ran into the same issue on https://investing.schwab.com/trading/start , I used "Report Broken Web Site" to report problem RMO12596395171178.
With html5.enabled, this login page doesn't work and gives "Error: setFocusOnLoginField is not defined" and "loginSubmit is not defined" in the JavaScript Error Console.  In the HTML source the script tag that defines these is between the head element's end tag and the body element's start tag.

Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.3a1pre) Gecko/20091130  Minefield/3.7a1pre
Priority: -- → P1
My guess is that repopping the head pointer puts the op queue in a bad state.
OS: Windows XP → All
Hardware: x86 → All
Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Summary: [HTML5] script between head and body is not executed → [HTML5][Patch] script between head and body is not executed
http://hg.mozilla.org/mozilla-central/rev/9cf7a6383087
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: