Bug 531373 - Script between head and body is not executed by HTML5 parser. rs=sicking.